<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TitlePadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/title" />

        <TextView
            style="@style/QuestionPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <EditText
            android:id="@+id/edit_answer_one"
            style="@style/AnswerPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question1Hint" />

        <TextView
            style="@style/QuestionPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/radio_answer_two"
            style="@style/AnswerPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/AnswerPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Answer1" />

            <RadioButton
                style="@style/AnswerPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Answer2" />

            <RadioButton
                style="@style/AnswerPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Answer3" />

            <RadioButton
                style="@style/AnswerPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2Answer4" />
        </RadioGroup>

        <TextView
            style="@style/QuestionPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3" />

        <CheckBox
            android:id="@+id/checkbox_question_3_answer_1"
            style="@style/CheckBoxPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3Answer1" />

        <CheckBox
            android:id="@+id/checkbox_question_3_answer_2"
            style="@style/CheckBoxPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3Answer2" />

        <CheckBox
            android:id="@+id/checkbox_question_3_answer_3"
            style="@style/CheckBoxPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3Answer3" />

        <CheckBox
            android:id="@+id/checkbox_question_3_answer_4"
            style="@style/CheckBoxPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3Answer4" />

        <TextView
            style="@style/QuestionPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4" />

        <RadioGroup
            android:id="@+id/radio_question_4_answer"
            style="@style/AnswerPadding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                style="@style/AnswerPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4Answer1" />

            <RadioButton
                style="@style/AnswerPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4Answer2" />

            <RadioButton
                style="@style/AnswerPadding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4Answer3" />
        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            style="@style/SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:onClick="checkAnswers"
            android:text="@string/submitButton" />

    </LinearLayout>
</ScrollView>